# hprdrm

./: .gitignore  ATTRIBUTIONS.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  conanfile.py  requirements.txt  tasks.py
assets/shaders/: postprocess.frag  visualizer.vert
src/: AudioEngine.cpp  AudioEngine.h  Camera.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
tests/: test_audio.cpp  test_camera.cpp
